# mini-ncnn

./: .gitignore  CMakeLists.txt  README.md
model/: squeezenet_v1.1_use_customer_op.param
src/: logger.cpp  main.cpp  squeezenet_v1.cpp
src/include/: logger.h  squeezenet_v1.h
src/op/: low_precision_convolution.cpp  low_precision_convolution.h  op.h
